Changelog
=========

8.3-dev - (unreleased)
----------------------

8.2 - (2014-02-03)
------------------
* Bug fix: cleaned references of tooltip macro being loaded from dataset_view
  [ichimdav refs #18197]

8.1 - (2014-01-22)
------------------
* Bug fix: reference geotags macros from eea.forms instead of
  eea.dataservice
  [ichimdav refs #16719]
* Bug fix: reference temporal-coverage macros from eea.forms instead of
  eea.dataservice
  [ichimdav refs #16719]
* Change: removed version pin of eea.themecentre from the plone4 buildout
  [ichimdav]
* Bug fix: check for truthiness of version_id when attempting to last version
  of an object for the Faceted Navigation WidgetFilter
  [ichimdav refs #17812]
* Change: removed the temporalCoverage field from the dataservice schema
  allowing the schemaextender from Products.EEAContentTypes to add the field
  [ichimdav refs #17611]

8.0 - (2013-12-10)
------------------
* Bug fix: correctly move the geographicalCoverage within the metadata tab
  for EEAFigure and Data
  [ichimdav refs #17663]
* Feature: added a possibility to define the map layer that should be used
  when using the view macro of the location widget. See example within
  eea.geotags.pt
  [ichimdav refs #17618]
* Bug fix: do not move the geotags map if the geotag div is hidden
  [ichimdav refs #17618]
* Change: moved the ITemporalCoverageAdapter from eea.dataservice into
  Products.EEAContentTypes
  [ichimdav refs #17588]
* Change: removed versions macro; now using viewlet
  [simiamih refs #17321]

7.9 - (2013-11-20)
------------------
* Feature: added ITemporalCoverageAdapter which is an adapter than can be
  overriden in order to return a temporalCoverage value
  [ichimdav refs #16719 and #17306]
* Feature: added styling for the geographical and temporal viewlets
  [ichimdav refs #16719]

7.8 - (2013-11-01)
------------------
* Change: sort by getObjPositionInParent the Data Files within dataset_view
  [ichimdav refs #17335]

7.7 - (2013-10-22)