@@ -3,6 +3,13 @@ Changelog
 
 8.3-dev - (unreleased)
 ----------------------
+* Upgrade step: Within "Plone > Site setup > Add-ons" click on
+  upgrade button available for eea.dataservice
+  [ichimdav #19367]
+
+* Change: Data and EEAFigure now have an indexer that indexes the values of
+ the location field
+ [ichimdav refs #19367]
 
 8.2 - (2014-02-03)
 ------------------
